content/nomad/v2.0.x/content/commands/acl/token/create.mdx
---
layout: docs
page_title: 'nomad acl token create command reference'
description: |
  The `nomad acl token create` command creates an access control list (ACL) token. Set name, client or management type, policy, role, time to live (TTL), and whether the policy should be global.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-02-16T16:52:52.000Z
last_modified: 2026-02-16T16:52:52.000Z
# END AUTO GENERATED METADATA
---

# `nomad acl token create` command reference

The `acl token create` command is used to create new ACL tokens.

## Usage

```plaintext
nomad acl token create [options]
```

The `acl token create` command can be used in two ways:
- If you provide no arguments it will return a system generated bootstrap token.
- If you would like to provide an operator generated client token, it is
possible to provide the `accessor` and the token using a file via `acl token
create -accessor=<accessor_id> [path]`. The Token can be read from stdin by
setting the path to "-".  Please make sure you secure this token in an
appropriate manner as it could be written to your terminal history.

## Create options

- `-name`: Sets the human readable name for the ACL token.

- `-type`: Sets the type of token. Must be one of "client" (default), or
  "management".

- `-global`: Sets the global mode of the token. Global tokens are replicated
  to all regions. This can not be changed after creation. Defaults to false.

- `-policy`: Specifies a policy to associate with the token. Can be specified
  multiple times, but only with client type tokens.

- `-role-id`: ID of a role to use for this token. May be specified multiple
  times.

- `-role-name`: Name of a role to use for this token. May be specified multiple
  times.

- `-ttl`: Specifies the time-to-live of the created ACL token. This takes the
  form of a time duration such as "5m" and "1h". By default, tokens will be
  created without a TTL and therefore never expire.

- `-accessor`: Pre-specify the AccessorID (UUID) for the token. When provided, the token
  must be supplied via <path> (a file or "-" for stdin). The token is uploaded
  rather than generated. Only valid for client tokens.

- `-json`:Output the ACL token information in JSON format.

- `-t`: Format and display the ACL token information using a Go template.

## Examples

Create a new ACL token linked to an ACL Policy and Role:

```shell-session
$ nomad acl token create -name="example-acl-token" -policy=example-acl-policy -role-name=example-acl-role
Accessor ID  = ef851ca0-b331-da5d-bbeb-7ede8f7c9151
Secret ID    = 11d5348a-8768-5baa-6185-c154980e1488
Name         = example-acl-token
Type         = client
Global       = false
Create Time  = 2022-08-23 12:16:09.680699039 +0000 UTC
Expiry Time  = <none>
Create Index = 140
Modify Index = 140
Policies     = [example-acl-policy]

Roles
ID                                    Name
2fe0c403-4502-e99d-4c79-a2821355e66d  example-acl-policy
```

Create a new ACL token with an expiry:

```shell-session
$ nomad acl token create -name="example-acl-token" -policy=example-acl-policy -ttl=8h
Accessor ID  = 1b60edc8-e4ed-08ef-208d-ecc18a90ccc3
Secret ID    = e4c7c80e-870b-c6a6-43d2-dbfa90130c06
Name         = example-acl-token
Type         = client
Global       = false
Create Time  = 2022-08-23 12:17:35.45067293 +0000 UTC
Expiry Time  = 2022-08-23 20:17:35.45067293 +0000 UTC
Create Index = 142
Modify Index = 142
Policies     = [example-acl-policy]

Roles
<none>
```

## General options

@include 'general_options_no_namespace.mdx'
